[gd_scene load_steps=27 format=2]

[ext_resource path="res://Fotos/esCircle.png" type="Texture" id=1]
[ext_resource path="res://Fotos/ptCircle.png" type="Texture" id=2]
[ext_resource path="res://Fotos/itCircle.png" type="Texture" id=3]
[ext_resource path="res://Fotos/elCircle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/InitialScreen/LanguageButton.gd" type="Script" id=6]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=7]
[ext_resource path="res://Languages/TranslationManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/InitialScreen/TranslationManager.gd" type="Script" id=9]
[ext_resource path="res://UI/InitialScreen/ConfirmLanguage.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sprites/charactersOverlay.png" type="Texture" id=11]
[ext_resource path="res://Fotos/enCircle.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/characterSelected.png" type="Texture" id=13]
[ext_resource path="res://UI/Keyboard/Shortcut.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Keyboard/Tiles/tile_0326.png" type="Texture" id=15]
[ext_resource path="res://Assets/Keyboard/Tiles/tile_0323.png" type="Texture" id=16]
[ext_resource path="res://Assets/Keyboard/Tiles/tile_0324.png" type="Texture" id=17]
[ext_resource path="res://Assets/Keyboard/Tiles/tile_0327.png" type="Texture" id=18]
[ext_resource path="res://Assets/Keyboard/Tiles/tile_0325.png" type="Texture" id=19]
[ext_resource path="res://UI/Keyboard/Shortcut_rightArrow.tscn" type="PackedScene" id=20]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=21]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 2 )

[node name="LanguageSelecter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -283.798, -203.913 )
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 2
color = Color( 0.945098, 0.631373, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Please select a language"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 1024.0
margin_bottom = 435.0
size_flags_vertical = 6
size_flags_stretch_ratio = 2.97
columns = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 274.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.435294, 0.12549, 1 )
text = "English"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Overlay_en" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer/TextureRect2"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="en" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.3371
margin_top = -86.6652
margin_right = 89.6629
margin_bottom = 88.3348
rect_min_size = Vector2( 175, 175 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/focus = SubResource( 4 )
action_mode = 0
icon = ExtResource( 12 )
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
overlay = NodePath("../Overlay_en")
button = NodePath("../../../../ConfirmButton")
translator = NodePath("../../../../../TranslationManager")
languageId = 1

[node name="Shortcut" parent="VBoxContainer/GridContainer/VBoxContainer" instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 85.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 274.0
texture = ExtResource( 16 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 205.0
margin_right = 405.0
margin_bottom = 274.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.435294, 0.12549, 1 )
text = "Español"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Overlay_es" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="es" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.3371
margin_top = -86.6652
margin_right = 89.6629
margin_bottom = 88.3348
rect_min_size = Vector2( 175, 175 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/focus = SubResource( 4 )
action_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
overlay = NodePath("../Overlay_es")
button = NodePath("../../../../ConfirmButton")
translator = NodePath("../../../../../TranslationManager")
languageId = 2

[node name="Shortcut" parent="VBoxContainer/GridContainer/VBoxContainer2" instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 85.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 274.0
texture = ExtResource( 17 )

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 410.0
margin_right = 610.0
margin_bottom = 274.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer3"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.435294, 0.12549, 1 )
text = "Ελληνικά"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer3"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Overlay_el" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="el" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2"]
margin_left = 12.0
margin_top = 13.0
margin_right = 191.0
margin_bottom = 188.0
rect_min_size = Vector2( 175, 175 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/focus = SubResource( 4 )
action_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
overlay = NodePath("../Overlay_el")
button = NodePath("../../../../ConfirmButton")
translator = NodePath("../../../../../TranslationManager")
languageId = 3

[node name="Shortcut" parent="VBoxContainer/GridContainer/VBoxContainer3" instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 85.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 274.0
texture = ExtResource( 19 )

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 615.0
margin_right = 815.0
margin_bottom = 274.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer4"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.901961, 0.435294, 0.12549, 1 )
text = "Italiano"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer4"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Overlay_it" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="it" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -87.0
margin_right = 91.0
margin_bottom = 88.0
rect_min_size = Vector2( 175, 175 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/focus = SubResource( 4 )
action_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
overlay = NodePath("../Overlay_it")
button = NodePath("../../../../ConfirmButton")
translator = NodePath("../../../../../TranslationManager")
languageId = 4

[node name="Shortcut" parent="VBoxContainer/GridContainer/VBoxContainer4" instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 85.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 274.0
texture = ExtResource( 15 )

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 820.0
margin_right = 1020.0
margin_bottom = 274.0
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/VBoxContainer5"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.901961, 0.435294, 0.12549, 1 )
text = "Português"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer5"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Overlay_pt" type="TextureRect" parent="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2"]
visible = false
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pt" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.3371
margin_top = -86.6652
margin_right = 89.6629
margin_bottom = 88.3348
rect_min_size = Vector2( 175, 175 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/focus = SubResource( 4 )
action_mode = 0
icon = ExtResource( 2 )
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
overlay = NodePath("../Overlay_pt")
button = NodePath("../../../../ConfirmButton")
translator = NodePath("../../../../../TranslationManager")
languageId = 5

[node name="Shortcut" parent="VBoxContainer/GridContainer/VBoxContainer5" instance=ExtResource( 14 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 85.0
margin_top = 244.0
margin_right = 115.0
margin_bottom = 274.0
texture = ExtResource( 18 )

[node name="ConfirmButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 924.0
margin_top = 479.0
margin_right = 1024.0
margin_bottom = 599.0
rect_min_size = Vector2( 100, 120 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 6
texture_normal = ExtResource( 7 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
initialScene = "res://UI/InitialScreen/InitialScreenWithIcon.tscn"

[node name="Shortcut_rightArrow" parent="VBoxContainer/ConfirmButton" instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.5
margin_top = -25.0
margin_right = 12.5
margin_bottom = 0.0

[node name="TranslationManager" parent="." instance=ExtResource( 8 )]
script = ExtResource( 9 )
instructionsNode = NodePath("../VBoxContainer/ColorRect/Label")

[node name="UISoundManager" parent="." instance=ExtResource( 21 )]

[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="UISoundManager" method="select"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="select"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="unselect"]
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="UISoundManager" method="select"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="select"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="unselect"]
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="UISoundManager" method="select"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="select"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="unselect"]
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="UISoundManager" method="select"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="select"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="unselect"]
[connection signal="button_down" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="UISoundManager" method="select"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer4/TextureRect2/it" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer3/TextureRect2/el" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer/TextureRect2/en" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer2/TextureRect2/es" method="unselect"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" to="VBoxContainer/GridContainer/VBoxContainer5/TextureRect2/pt" method="select"]
[connection signal="button_down" from="VBoxContainer/ConfirmButton" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="VBoxContainer/ConfirmButton" method="save_languageSelected"]

[editable path="VBoxContainer/GridContainer/VBoxContainer/Shortcut"]
